--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,157 @@ body {
   color: #fa5959;
 }
 
+.menu-open,
+.menu-close {
+  position: relative;
+  top: 5px;
+  right: 60px;
+  background-color: transparent;
+  font-size: 35px;
+  border: none;
+  display: none;
+}
 
+@media screen and (max-width: 992px) {
+  .site-nav {
+    position: absolute;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #2f354fd3;
+    transition: 0.5s ease all;
+    z-index: 100;
+  }
+
+  .logo {
+    position: absolute;
+    padding-left: 25px;
+    z-index: 200;
+  }
+
+  .nav-list {
+    display: flex;
+    gap: 30px;
+    flex-direction: column;
+  }
+
+  .nav-item {
+    margin-right: 44px;
+  }
+  .nav-link {
+    color: #fff;
+    font-family: sans-serif;
+    font-size: 20px;
+  }
+
+  .nav-item::before {
+    content: '';
+    display: inline-block;
+    width: 100%;
+    height: 1px;
+    background-color: #fff;
+    opacity: 0.5;
+    margin-bottom: 24px;
+  }
+
+  .site-btn {
+    width: 100%;
+    background: none;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    padding: 12px 34px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 17px;
+    letter-spacing: 1.5px;
+    color: #fff;
+    cursor: pointer;
+  }
+  .nav-item:hover .site-btn {
+    background: none;
+    border: 2px solid #FA5959;
+    color: #FA5959;
+  }
+
+  
+  .modal {
+    display: block;
+  }
+
+  .show {
+    top: 0%;
+  }
+
+  .menu-open {
+    display: block;
+  }
+  .hide {
+    display: none;
+  }
+
+  .menu-close {
+    position: absolute;
+    top: 60px;
+    right: 70px;
+    display: none;
+    color: #fff;
+    z-index: 101;
+  }
+  .show-it {
+    display: block;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .hero-entry {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .hero-img {
+    margin-bottom: 60px;
+  }
+  .hero-title {
+    text-align: center;
+  }
+  .hero-text {
+    text-align: center;
+  }
+
+  .hero-btns {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+  }
+
+  .hero-entry {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+
+  .click-box {
+    margin-bottom: 50px;
+  }
+
+  .click-info {
+    margin: 0 auto;
+    text-align: center;
+  }
+  .app-item {
+    position: relative;
+    top: 40px;
+  }
+
+  .footer-item {
+    margin-right: 44px;
+  }
+
+}
 
 .hero-title {
   font-weight: 500;
@@ -128,7 +278,8 @@ body {
 .hero-img {
   background-image: url(../imgs/rek.png);
   position: relative;
-  left: 210px;
+  right: -190px;
+  bottom: 0;
   background-repeat: no-repeat;
   width: 550px;
   height: 352px;
@@ -447,6 +598,7 @@ body {
 
 .drop-box {
   display: none;
+  height: 250px;
 }
 
 .drop-desc {
